--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ tests/protocol/tsend
 tests/configuration/tconfiguration
 tests/features/tsyntax
 tests/features/tdeclaration
+tests/features/treferences
