--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ tests/configuration/tconfiguration
 tests/features/tsyntax
 tests/features/tdeclaration
 tests/features/treferences
+tests/features/tcompletion
