Draft a rough implementation of the textDocument/documentSymbol request

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ tests/features/tsyntax
 tests/features/tdeclaration
 tests/features/treferences
 tests/features/tcompletion
+tests/features/tdocument_symbol
