[ci] Add PAT to vparse checkout step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         repository: 'sthenic/vparse'
         path: vparse
+        token: ${{ secrets.VPARSE_TOKEN }}
 
     - name: Cache choosenim
       id: cache-choosenim
