[server] Implement textDocument/documentHighlight

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ tests/features/treferences
 tests/features/tcompletion
 tests/features/tdocument_symbol
 tests/features/trename
+tests/features/tdocument_highlight
