[server] Early draft of support for textDocument/hover requests

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ tests/features/tcompletion
 tests/features/tdocument_symbol
 tests/features/trename
 tests/features/tdocument_highlight
+tests/features/thover
