--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,7 @@ jobs:
 
     - name: Build Windows
       if: ${{ matrix.os == 'windows-latest' }}
+      shell: bash
       run: |
         cd vls
         nimble build -y
