--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
         cd vls
         nimble build -y
         ARCHIVE_FILENAME="vls-$(cat src/VERSION)-win_x86_64"
-        7z a -tzip "${ARCHIVE_FILENAME}.zip" vls LICENSE THIRD_PARTY_LICENSES.md CHANGELOG.md
+        7z a -tzip "${ARCHIVE_FILENAME}.zip" vls.exe LICENSE THIRD_PARTY_LICENSES.md CHANGELOG.md
         FCIV -md5 "${ARCHIVE_FILENAME}.zip" > ${ARCHIVE_FILENAME}.zip.md5
 
     - name: Upload artifacts
