--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,20 +4,18 @@ on:
     tags:
       - 'v*'
 
-env:
-  VLS_VERSION:
-
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os:
+          - ubuntu-20.04
           - ubuntu-18.04
           - ubuntu-16.04
           - windows-latest
+          - macos-latest
     steps:
-    # Check out the repository under $GITHUB_WORKSPACE.
     - name: Checkout vls
       uses: actions/checkout@v2
       with:
@@ -90,6 +88,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.VPARSE_TOKEN }}
       with:
+        draft: true
         files: |
           vls/*.tar.gz
           vls/*.tar.gz.md5
