[tests] Add test suite for source file diagnostic messages
This covers the newly added diagnostic messages detecting:
- undeclared identifiers,
- unlisted ports; and
- unconnected input ports

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ tests/protocol/trecv
 tests/protocol/tsend
 tests/configuration/tconfiguration
 tests/features/tsyntax
+tests/features/tdiagnostics
 tests/features/tdeclaration
 tests/features/treferences
 tests/features/tcompletion
