[ci] Update label

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         nim-version: 'stable'
 
-    - name: Install vparse and vltoml
+    - name: Install vparse, vltoml and vlint
       run: |
         pushd parsetoml
         nimble install -y
